Fix - Autocomplete field not showing validation error (#1912)

--- a/geonode_mapstore_client/client/themes/geonode/less/_metadata.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_metadata.less
@@ -13,8 +13,17 @@
             .border-color-var(@theme-vars[main-border-color]);
         }
     }
-    .gn-metadata-groups .gn-metadata-group > .field-object {
-        .border-color-var(@theme-vars[main-border-color]);
+    .gn-metadata-groups {
+        .gn-metadata-group {
+            & > .field-object {
+                .border-color-var(@theme-vars[main-border-color]);
+            }
+            .has-error {
+                label, .help-title, .gn-metadata-form-description {
+                    .color-var(@theme-vars[danger])
+                }
+            }
+        }
     }
     .gn-metadata-list {
         .border-right-color-var(@theme-vars[main-border-color]);
